apps/weechat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weechat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weechat
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: weechat
    spec:
      imagePullSecrets:
        - name: registry-hubbe-club-creds
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - image: registry.hubbe.club/weechat:v3.0.1
          name: weechat
          livenessProbe:
            exec:
              command:
                - "tmux"
                - "has-session"
                - "-t"
                - "weechat"
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
          volumeMounts:
            - name: data
              mountPath: /home/weechat/.weechat
            - name: weechat
              mountPath: /home/weechat/
      volumes:
        - name: weechat
          configMap:
            name: weechat-configs
            items:
              - key: tmux.conf
                path: .tmux.conf
              - key: start.sh
                path: start.sh
                mode: 0755
        - name: data
          persistentVolumeClaim:
            claimName: data-weechat-dbchat
