apps/weechat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weechat
spec:
  ports:
    - port: 9000
  selector:
    app: weechat
