apps/weechat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weechat
  annotations:
    # long timeout on reads to avoid disconnects on IRC inactivity
    nginx.ingress.kubernetes.io/proxy-read-timeout: "604800"
    # rate limiting zone
    nginx.ingress.kubernetes.io/configuration-snippet: "limit_req zone=weechat burst=1 nodelay;"
spec:
  tls:
    - hosts:
      - weechat.hubbe.club  
  rules:
    - host: weechat.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weechat
                port:
                  number: 9000
